<resources>
    <string name="app_name">Tupai Mobile</string>
    <string name="key_account_type">com.pajakku.tupaimobile</string>
    <string name="global_package_name">com.pajakku.tupaimobile</string>
    <string name="deeplink_scheme">app</string>
    <string name="deeplink_host">com.pajakku.tupaimobile</string>
    <string name="global_save">Simpan</string>
    <string name="global_img_desc">img</string>
    <string name="global_confirm">Konfirmasi</string>
    <string name="global_yes">Ya</string>
    <string name="global_no">Tidak</string>
    <string name="global_toast_unable_access_server">Server %1$s tidak bisa diakses.</string>
    <string name="global_toast_connecttimeout">Connection timeout.</string>
    <string name="global_toast_server_return_code">Akses gagal. HTTP code %1$d.</string>
    <string name="global_toast_unauthorized">Tidak punya otorisasi. Coba logout dan login ulang.</string>
    <string name="global_toast_autologinsuccess">Login otomatis sukses. Silahkan coba lagi</string>
    <string name="global_toast_accessnoauth">Gagal otorisasi. Silahkan coba lagi.</string>
    <string name="global_toast_failrelogin">Login ulang gagal.</string>
    <string name="global_toast_emonsessionexpire">Tidak punya sesi. Silahkan coba lagi</string>
    <string name="global_dialogprogress_btn_cancel">Batal</string>
    <string name="global_version">Ver. %1$s</string>
    <string name="global_toprightbtn_quickhelp">Bantuan Singkat</string>
    <string name="global_toprightbtn_about">Tentang Aplikasi</string>
    <string name="global_toprightbtn_logout">Log-out</string>
    <string name="global_cancel">Batal</string>
    <string name="clutility_validator_mandatory">Wajib diisi</string>
    <string name="clutility_validator_minimum">Minimal %1$d karakter</string>
    <string name="global_noticelabel_sptnonactive">Untuk sementara,\nfungsi SPT tidak aktif.</string>
    <string name="global_dialoginfo_btn_close">Tutup</string>
    <string name="global_dialoginfo_label_topupdesc">Top Up Tupai Saldo</string>
    <string name="global_dialoginfo_label_succestopupmsg">Selamat, Pembayaran Top Up Tupai Saldo Anda telah berhasil!</string>
    <string name="listfindpanel_hint_find">Cari&#8230;</string>
    <string name="modellabel_sptdraft">SPT dapat di-edit sebelum dilaporkan.</string>
    <string name="modellabel_sptsubmit">SPT terkirim. Menunggu hasil laporan.</string>
    <string name="modellabel_sptdone">SPT sudah berhasil dilaporkan.</string>
    <string name="rowbrutotax_hint_workaddress">Alamat Usaha</string>
    <string name="radiovalue_gender_man">L</string>
    <string name="radiovalue_gender_woman">P</string>
    <string name="radiovalue_nikah_yes">1</string>
    <string name="radiovalue_nikah_no">2</string>
    <string name="radiovalue_tanggungan_0">0</string>
    <string name="radiovalue_tanggungan_1">1</string>
    <string name="radiovalue_tanggungan_2">2</string>
    <string name="radiovalue_tanggungan_3">3</string>
    <string name="radiovalue_jmlpenghasilan_kurang">1</string>
    <string name="radiovalue_jmlpenghasilan_4jt">2</string>
    <string name="radiovalue_jmlpenghasilan_10jt">3</string>
    <string name="radiovalue_jmlpenghasilan_15jt">4</string>
    <string name="radiovalue_jmlpenghasilan_20jt">5</string>
    <string name="radiovalue_metodebuku_buku">0</string>
    <string name="radiovalue_metodebuku_catat">1</string>
    <string name="radiovalue_punyakaryawan_yes">0</string>
    <string name="radiovalue_punyakaryawan_no">1</string>
    <string name="progressdialog_common">Akses server&#8230;</string>
    <string name="progressdialog_authorize">Otorisasi&#8230;</string>
    <string name="progressdialog_accesstoken">Akses token&#8230;</string>
    <string name="progressdialog_userdata">Akses data pengguna&#8230;</string>
    <string name="progressdialog_taxtype">Mengambil tipe pajak&#8230;</string>
    <string name="progressdialog_ssp">Mengambil SSP&#8230;</string>
    <string name="progressdialog_translog">Mengambil data transaksi&#8230;</string>
    <string name="progressdialog_generateidbill">ID Billing&#8230;</string>
    <string name="progressdialog_register">Register&#8230;</string>
    <string name="progressdialog_kjs">Mengambil KJS&#8230;</string>
    <string name="progressdialog_wp">Mengambil WP&#8230;</string>
    <string name="progressdialog_savewp">Simpan WP&#8230;</string>
    <string name="progressdialog_updatewp">Perbarui WP&#8230;</string>
    <string name="progressdialog_delorganization">Hapus WP&#8230;</string>
    <string name="progressdialog_finnetinquiry">Cek kode billing&#8230;</string>
    <string name="progressdialog_checksspstatus">Generate kode billing&#8230;</string>
    <string name="progressdialog_mcashtransaction">Mulai transaksi&#8230;</string>
    <string name="progressdialog_saventpn">Simpan NTPN&#8230;</string>
    <string name="progressdialog_sendproblem">Lapor masalah&#8230;</string>
    <string name="progressdialog_resetpass">Reset password&#8230;</string>
    <string name="progressdialog_createssp">Simpan SSP&#8230;</string>
    <string name="progressdialog_delssp">Hapus SSP&#8230;</string>
    <string name="progressdialog_mctoken">Token mobile cash&#8230;</string>
    <string name="progressdialog_accesstopup">Akses top-up&#8230;</string>
    <string name="progressdialog_mcbalance">Mendapatkan saldo&#8230;</string>
    <string name="progressdialog_savecompany">Simpan perusahaan&#8230;</string>
    <string name="progressdialog_saveprofile">Simpan profile&#8230;</string>
    <string name="progressdialog_reloadprofile">Reload profile&#8230;</string>
    <string name="progressdialog_sendemonotp">Verifikasi OTP&#8230;</string>
    <string name="progressdialog_inquirywp">Mendapatkan data WP&#8230;</string>
    <string name="progressdialog_payssp">Bayar SSP&#8230;</string>
    <string name="progressdialog_emonregisterphone">Aktivasi mobile cash&#8230;</string>
    <string name="progressdialog_savefcm">Set sistem notifikasi&#8230;</string>
    <string name="progressdialog_loadssp">Mengambil SSP&#8230;</string>
    <string name="progressdialog_starttransaction">Memulai transaksi&#8230;</string>
    <string name="progressdialog_createpdf">Membuat PDF&#8230;</string>
    <string name="progressdialog_reportspt">Lapor SPT&#8230;</string>
    <string name="comp_gridcollection_btn_reloadtaxtype">Reload Tipe Pajak</string>
    <string name="comp_gridadapter_label_pasal">%1$d Pasal</string>
    <string name="comp_topupwidget_label_saldo">Tupai Saldo</string>
    <string name="comp_topupwidget_btn_topup">Top-up</string>
    <string name="comp_topupwidget_label_nova">No. VA: %1$s</string>
    <string name="comp_topupwidget_label_activatemcash">Aktivasi mobile cash?</string>
    <string name="comp_topupwidget_btn_activatemcash">AKTIVASI M-CASH</string>
    <string name="comp_topupwidget_toast_loading">Sistem sedang memuat.</string>
    <string name="comp_paymethodbutton_label_va">Tupai Saldo Anda (VA: %1$s)</string>
    <string name="comp_paymentprice_label_product">Nama Produk</string>
    <string name="comp_paymentprice_label_paytax">Pembayaran Pajak</string>
    <string name="comp_paymentprice_label_price">Harga</string>
    <string name="comp_paymentprice_label_channelcost">Biaya Channel</string>
    <string name="comp_paymentprice_label_totaltransfer">Jumlah Transfer</string>
    <string name="comp_paymentprice_label_totalpay">Jumlah Bayar</string>
    <string name="comp_tupaisaldobar_label_yoursaldo">Tupai Saldo Anda</string>
    <string name="comp_tupaisaldobar_val_nova">No. VA: %1$s</string>
    <string name="comp_topupnominal_topuptupaisaldo">Top Up Tupai Saldo</string>
    <string name="comp_versionnoticebtn_updatenotice">Harap update ke versi terbaru.</string>
    <string name="comp_taxwpheader_val_kap">Kode Akun Pajak (KAP): %1$s</string>
    <string name="comp_taxwpheader_val_kapkjs">KAP: %1$s, KJS: %2$s</string>
    <string name="comp_taxwpheader_val_taxaccount">%1$s (KAP: %2$s, KJS: %3$s)</string>
    <string name="comp_taxwpheader_val_taxaccountperiod">%1$s (KAP: %2$s, KJS: %3$s) %4$s</string>
    <string name="comp_taxwpheader_label_totalpay">Jumlah Bayar</string>
    <string name="comp_finddialog_title">Pencarian Data</string>
    <string name="comp_finddialog_inp_field">Kolom</string>
    <string name="comp_finddialog_inp_query">Nilai</string>
    <string name="comp_finddialog_valfilter_name">Nama</string>
    <string name="comp_finddialog_valfilter_npwp">NPWP</string>
    <string name="comp_finddialog_valfilter_year">Tahun</string>
    <string name="comp_finddialog_btn_find">Cari</string>
    <string name="comp_sspdetailrowinfo_validuntil">Berlaku sampai %1$s</string>
    <string name="comp_filterview_label_title">Pencarian Data</string>
    <string name="comp_filterview_label_titlesort">Pengurutan Data</string>
    <string name="comp_filterview_label_findbytitle">Pencarian Berdasarkan</string>
    <string name="editprof_page_title">Profil</string>
    <string name="editprof_hint_username">Username</string>
    <string name="editprof_hint_name">Nama</string>
    <string name="editprof_hint_email">Surel</string>
    <string name="editprof_hint_phone">Telepon</string>
    <string name="editprof_btn_save">Simpan</string>
    <string name="sspdetaildone_btn_createpdf">Buat PDF</string>
    <string name="sspdetailfinish_page_title">BPN</string>
    <string name="sspdetailfinish_label_bpntitle">Bukti Penerimaan Negara</string>
    <string name="sspdetailfinish_label_npwp">NPWP</string>
    <string name="sspdetailfinish_label_refno">No. Referensi</string>
    <string name="sspdetailfinish_label_wpname">Nama WP</string>
    <string name="sspdetailfinish_label_address">Alamat</string>
    <string name="sspdetailfinish_label_kapkjs">KAP, KJS</string>
    <string name="sspdetailfinish_label_taxperiod">Masa Pajak</string>
    <string name="sspdetailfinish_label_setor">Jumlah Setor</string>
    <string name="sspdetailfinish_label_billcode">Kode Billing</string>
    <string name="sspdetailfinish_label_ntb">NTB</string>
    <string name="sspdetailfinish_label_ntpn">NTPN</string>
    <string name="sspdetailfinish_label_paydate">Tgl Bayar</string>
    <string name="sspdetailfinish_label_bookdate">Tgl Buku</string>
    <string name="sspdetailfinish_label_payprovider">Provider Bayar</string>
    <string name="paytaxsknop_page_title">No. SK / NOP / Penyetor</string>
    <string name="paytaxsknop_label_guide">Isi No. SK / NOP / Penyetor bila diperlukan</string>
    <string name="paypphsksop_hint_sk">Nomor SK</string>
    <string name="paypphsksop_hint_nop">NOP</string>
    <string name="paypphsknop_hint_npwppenyetor">Subjek Pajak (NPWP Penyetor)</string>
    <string name="paytaxsknop_btn_next"><b>SELANJUTNYA</b></string>
    <string name="paytaxsummary_page_title">Bayar Pajak: SSP</string>
    <string name="paypphsummary_label_npwp">NPWP</string>
    <string name="paypphsummary_label_name">Nama WP</string>
    <string name="paypphsummary_label_address">Alamat</string>
    <string name="paypphsummary_label_kapkjs">KAP | KJS</string>
    <string name="paypphsummary_label_taxperiod">Masa Pajak</string>
    <string name="paypphsummary_label_nosk">No. SK</string>
    <string name="paypphsummary_label_nop">NOP</string>
    <string name="paypphsummary_label_npwppenyetor">NPWP Penyetor</string>
    <string name="paypphsummary_label_setor">Jumlah Setor</string>
    <string name="paypphsummary_btn_save"><b>SIMPAN</b></string>
    <string name="spt2year_label_guide">Isi tahun pajak dan status SPT.</string>
    <string name="spt1year_hint_year">Tahun Pajak</string>
    <string name="spt1year_hint_pembetulanke">Pembetulan Ke</string>
    <string name="spt2year_label_pembetulan">Status SPT</string>
    <string name="spt1year_inp_pembetulannormal">Normal</string>
    <string name="spt1year_inp_pembetulanke">Pembetulan</string>
    <string name="spt2year_btn_createdraft">Selanjutnya</string>
</resources>