<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sspdetail_finish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pajakku.tupaimobile.activity.SSPDetailDoneActivity">

    <com.pajakku.tupaimobile.component.AppActionBar
        android:id="@+id/sspdetaildone_actionbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        app:title="@string/sspdetailfinish_page_title"
        />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/fraghome_swipyrefreshlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/sspdetaildone_actionbar"
        android:layout_above="@+id/sspdetaildone_btn_cek_pay_status"
        >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_content_pad"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/sspdetailfinish_label_bpntitle"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sspdetailfinish_lbl_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:typeface="sans"
                android:textSize="11sp"
                android:text="Transaksi sedang dalam Proses"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="@dimen/holo_shadow_pad"
                android:background="#dddddd"
                />

            <com.pajakku.tupaimobile.component.SSPDetailRowInfo
                android:id="@+id/sspdetailfinish_label_ntb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:var_text="@string/sspdetailfinish_label_ntb"
                />
            <com.pajakku.tupaimobile.component.SSPDetailRowInfo
                android:id="@+id/sspdetailfinish_label_ntpn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:var_text="@string/sspdetailfinish_label_ntpn"
                />
            <com.pajakku.tupaimobile.component.SSPDetailRowInfo
                android:id="@+id/sspdetailfinish_label_npwp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:var_text="@string/sspdetailfinish_label_npwp"
                />
            <com.pajakku.tupaimobile.component.SSPDetailRowInfo
                android:id="@+id/sspdetailfinish_label_npwppenyetor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:var_text="@string/sspdetailfinish_label_npwp"
                />
            <com.pajakku.tupaimobile.component.SSPDetailRowInfo
                android:id="@+id/sspdetailfinish_label_setor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:var_text="@string/sspdetailfinish_label_setor"
                />
            <com.pajakku.tupaimobile.component.SSPDetailRowInfo
                android:id="@+id/sspdetailfinish_label_refno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:var_text="@string/sspdetailfinish_label_refno"
                />
            <!--<com.pajakku.tupaimobile.component.SSPDetailRowInfo-->
                <!--android:id="@+id/sspdetailfinish_label_sspdate"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:var_text="@string/sspdetailfinish_label_sspdate"-->
                <!--/>-->
            <com.pajakku.tupaimobile.component.SSPDetailRowInfo
                android:id="@+id/sspdetailfinish_label_wpname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:var_text="@string/sspdetailfinish_label_wpname"
                />
            <com.pajakku.tupaimobile.component.SSPDetailRowInfo
                android:id="@+id/sspdetailfinish_label_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:var_text="@string/sspdetailfinish_label_address"
                />
            <com.pajakku.tupaimobile.component.SSPDetailRowInfo
                android:id="@+id/sspdetailfinish_label_kapkjs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:var_text="@string/sspdetailfinish_label_kapkjs"
                />
            <com.pajakku.tupaimobile.component.SSPDetailRowInfo
                android:id="@+id/sspdetailfinish_label_taxperiod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:var_text="@string/sspdetailfinish_label_taxperiod"
                />
            <com.pajakku.tupaimobile.component.SSPDetailRowInfo
                android:id="@+id/sspdetailfinish_label_billcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:var_text="@string/sspdetailfinish_label_billcode"
                />
            <com.pajakku.tupaimobile.component.SSPDetailRowInfo
                android:id="@+id/sspdetailfinish_label_paydate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:var_text="@string/sspdetailfinish_label_paydate"
                />
            <com.pajakku.tupaimobile.component.SSPDetailRowInfo
                android:id="@+id/sspdetailfinish_label_bookdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:var_text="@string/sspdetailfinish_label_bookdate"
                android:visibility="gone"
                />
            <com.pajakku.tupaimobile.component.SSPDetailRowInfo
                android:id="@+id/sspdetailfinish_label_payprovider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:var_text="@string/sspdetailfinish_label_payprovider"
                android:visibility="gone"
                />

        </LinearLayout>  <!-- SCROLL END -->
    </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sspdetaildone_btn_cek_pay_status"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="@dimen/gap7"
        android:layout_marginRight="@dimen/gap7"
        android:text="Update Status Bayar"
        android:layout_above="@+id/sspdetaildone_btn_createpdf"
        />

    <com.pajakku.tupaimobile.component.AppButton
        android:id="@+id/sspdetaildone_btn_createpdf"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/layout_content_pad"
        android:layout_alignParentBottom="true"
        android:text="@string/sspdetaildone_btn_createpdf"
        />

    <!-- RELOADER -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sspdetaildone_btn_reloader"
        android:visibility="gone"
        style="@style/ButtonRed"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/gap14"
        android:text="Akses Ulang"
        android:layout_below="@+id/sspdetaildone_actionbar"
        />

</RelativeLayout>
