<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pajakku.tupaimobile.activity.EditProfileActivity">

    <com.pajakku.tupaimobile.component.AppActionBar
        android:id="@+id/editprof_actionbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/editprof_page_title"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editprof_actionbar"
        android:layout_above="@+id/editprof_btn_save">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_content_pad"
            android:orientation="vertical">

            <com.pajakku.tupaimobile.component.AppEditText
                android:id="@+id/editprof_inp_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                app:hint="@string/editprof_hint_username"/>

            <com.pajakku.tupaimobile.component.AppEditText
                android:id="@+id/editprof_inp_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/editprof_hint_name"/>

            <com.pajakku.tupaimobile.component.AppEditText
                android:id="@+id/editprof_inp_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/editprof_hint_email"/>

            <com.pajakku.tupaimobile.component.AppEditText
                android:id="@+id/editprof_inp_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/editprof_hint_phone"/>

            <!--<com.pajakku.tupaimobile.component.AppEditText-->
                <!--android:id="@+id/editprof_inp_address"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:hint="@string/editprof_hint_address"/>-->

        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/editprof_btn_save"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/layout_content_pad"
        android:text="@string/editprof_btn_save"/>

</RelativeLayout>
